--- a/package.xml
+++ b/package.xml
@@ -1,19 +1,78 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no" ?>
-<package format="1" xmlns="https://wiki.freecad.org/Package_Metadata">
-  <name>FreeCAD HTML documentation</name>
-  <description>The FreeCAD documentation for offline use</description>
-  <version>1.0.0-alpha</version>
-  <date>2024-12-15</date>
-  <maintainer email="reqrefusio@uncreated.net">Turan Furkan Topak</maintainer>
-  <license file="LICENSE">CC0-1.0</license>
-  <url type="repository" branch="main">https://github.com/Reqrefusion/FreeCAD-Documentation-html</url>
-  <!-- No icon yet <icon></icon> -->
+<?xml
+    version = '1.0'
+    encoding = 'UTF-8'
+    standalone = 'no'
+?>
+<package
+    format = '1'
+    xmlns = 'https://wiki.freecad.org/Package_Metadata'
+>
 
-  <content>
-    <workbench>
-      <classname>Documentation</classname>
-      <subdirectory>./</subdirectory>
-    </workbench>
-  </content>
+    <!--[ Versions ]―――――――――――――――――――――――――――――――――――――――――――――――――――――――――-->
+
+    <freecadmin>1.1.0</freecadmin>
+    <version>1.0.1</version>
+    <date>2026-01-21</date>
+
+    <!--[ Info ]―――――――――――――――――――――――――――――――――――――――――――――――――――――――――――――-->
+
+    <description>Local version of the FreeCAD Wiki.</description>
+    <name>Offline Wiki</name>
+
+    <!--[ Tags ]―――――――――――――――――――――――――――――――――――――――――――――――――――――――――――――-->
+
+    <tag>Offline</tag>
+    <tag>Local</tag>
+    <tag>Wiki</tag>
+
+    <!--[ Maintainers ]――――――――――――――――――――――――――――――――――――――――――――――――――――――-->
+
+    <maintainer
+        email = 'reqrefusio@uncreated.net'
+    >Turan Furkan Topak</maintainer>
+
+    <!--[ Authors ]――――――――――――――――――――――――――――――――――――――――――――――――――――――――――-->
+
+    <author
+        email = 'reqrefusio@uncreated.net'
+    >Turan Furkan Topak</author>
+
+    <!--[ Licenses ]―――――――――――――――――――――――――――――――――――――――――――――――――――――――――-->
+
+    <license
+        file = 'LICENSE'
+    >CC0-1.0</license>
+
+    <!--[ Icon ]―――――――――――――――――――――――――――――――――――――――――――――――――――――――――――――-->
+
+    <!-- <icon>Resources/Media/Logo.svg</icon> -->
+
+    <!--[ Urls ]―――――――――――――――――――――――――――――――――――――――――――――――――――――――――――――-->
+
+    <url
+        type = 'documentation'
+    >https://github.com/Reqrefusion/FreeCAD-Documentation-html</url>
+
+    <url
+        branch = 'main'
+        type = 'repository'
+    >https://github.com/Reqrefusion/FreeCAD-Documentation-html</url>
+
+    <url
+        type = 'bugtracker'
+    >https://github.com/Reqrefusion/FreeCAD-Documentation-html/issues</url>
+
+    <url
+        type = 'readme'
+    >https://github.com/Reqrefusion/FreeCAD-Documentation-html/blob/main/README.md</url>
+
+    <!--[ Content ]――――――――――――――――――――――――――――――――――――――――――――――――――――――――――-->
+
+    <content>
+        <workbench>
+            <subdirectory>.</subdirectory>
+            <classname>OfflineWiki</classname>
+        </workbench>
+    </content>
 
 </package>
