Create addon logo

--- a/package.xml
+++ b/package.xml
@@ -45,7 +45,7 @@
 
     <!--[ Icon ]―――――――――――――――――――――――――――――――――――――――――――――――――――――――――――――-->
 
-    <!-- <icon>Resources/Media/Logo.svg</icon> -->
+    <icon>Resources/Media/Logo.svg</icon>
 
     <!--[ Urls ]―――――――――――――――――――――――――――――――――――――――――――――――――――――――――――――-->
 
