Add code licensing info

--- a/package.xml
+++ b/package.xml
@@ -40,7 +40,11 @@
     <!--[ Licenses ]―――――――――――――――――――――――――――――――――――――――――――――――――――――――――-->
 
     <license
-        file = 'LICENSE'
+        file = 'LICENSE-CODE'
+    >GPL-2.0-or-later</license>
+
+    <license
+        file = 'LICENSE-WIKI'
     >CC0-1.0</license>
 
     <!--[ Icon ]―――――――――――――――――――――――――――――――――――――――――――――――――――――――――――――-->
